@@ -68,6 +68,7 @@ protected:
   afx_msg void OnEndLabelEdit(LPNMHDR pnmhdr, LRESULT *pLResult);
   afx_msg void OnExpandCollapse(NMHDR *pNotifyStruct, LRESULT *result);
   afx_msg void OnTreeItemSelected(NMHDR *pNotifyStruct, LRESULT *result);
+  afx_msg void OnTreeGetToolTip(NMHDR *pNotifyStruct, LRESULT *result);
   afx_msg void OnBeginDrag(LPNMHDR pnmhdr, LRESULT *pLResult);
   afx_msg void OnDestroy();
   //
