@@ -272,7 +272,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 218
         TOPMARGIN, 7
-        BOTTOMMARGIN, 204
+        BOTTOMMARGIN, 222
         HORZGUIDE, 19
         HORZGUIDE, 31
     END
@@ -973,42 +973,44 @@ BEGIN
     CONTROL         "Start PasswordSafe at Login",IDC_STARTUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,40,199,10
 END
 
-IDD_PS_DISPLAY DIALOGEX 0, 0, 223, 211
+IDD_PS_DISPLAY DIALOGEX 0, 0, 223, 229
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "Display"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CONTROL         "Show username in display tree",IDC_DEFUNSHOWINTREE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,17,197,10
-    CONTROL         "Show password in display tree",IDC_DEFPWSHOWINLIST,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,31,197,10
-    CONTROL         "Show password in add && edit",IDC_DEFPWSHOWINEDIT,
+    CONTROL         "Show password in display tree",IDC_DEFPWSHOWINTREE,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,30,197,10
+    CONTROL         "Show notes as ToolTips in display tree",IDC_DEFNTSHOWASTIPSINTREE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,43,197,10
-    CONTROL         "Show notes in edit",IDC_DEFNOTESSHOWINEDIT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,55,197,10
+    CONTROL         "Show password in add && edit",IDC_DEFPWSHOWINEDIT,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,56,197,10
+    CONTROL         "Show notes in edit",IDC_DEFNOTESSHOWINEDIT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,69,197,10
     CONTROL         "Put groups first in display tree",IDC_DEFEXPLORERTREE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,67,197,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,82,197,10
     CONTROL         "Show grid lines in display list",IDC_DEFENABLEGRIDLINES,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,79,197,10
-    CONTROL         "Warn",IDC_PREWARNEXPIRY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,93,32,10
-    EDITTEXT        IDC_PREEXPIRYWARNDAYS,42,91,22,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_PREWARNEXPIRYSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_AUTOBUDDY | UDS_ARROWKEYS,65,91,10,14
-    LTEXT           "days before passwords expire",IDC_STATIC,78,94,94,8
-    GROUPBOX        "Initial tree view",IDC_STATIC,7,108,211,50
-    CONTROL         "Fully collapsed",IDC_TREE_DISPLAY_COLLAPSED,"Button",BS_AUTORADIOBUTTON | WS_GROUP,9,120,110,10
-    CONTROL         "Fully expanded",IDC_TREE_DISPLAY_EXPANDED,"Button",BS_AUTORADIOBUTTON,9,132,110,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,95,197,10
+    CONTROL         "Warn",IDC_PREWARNEXPIRY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,108,32,10
+    EDITTEXT        IDC_PREEXPIRYWARNDAYS,42,106,22,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_PREWARNEXPIRYSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_AUTOBUDDY | UDS_ARROWKEYS,64,106,10,14
+    LTEXT           "days before passwords expire",IDC_STATIC,78,109,94,8
+    GROUPBOX        "Initial tree view",IDC_STATIC,7,124,211,50
+    CONTROL         "Fully collapsed",IDC_TREE_DISPLAY_COLLAPSED,"Button",BS_AUTORADIOBUTTON | WS_GROUP,9,136,110,10
+    CONTROL         "Fully expanded",IDC_TREE_DISPLAY_EXPANDED,"Button",BS_AUTORADIOBUTTON,9,148,110,10
     CONTROL         "Same as when last saved",IDC_TREE_DISPLAY_LASTSAVE,
-                    "Button",BS_AUTORADIOBUTTON,9,144,147,10
-    CONTROL         "",IDC_RST_BLK,"Button",BS_AUTORADIOBUTTON | BS_ICON | WS_GROUP | WS_TABSTOP,40,181,11,10
-    ICON            IDI_TRAY,IDC_STATIC,53,176,20,20
-    CONTROL         "",IDC_RST_BLUE,"Button",BS_AUTORADIOBUTTON | BS_ICON,76,181,11,10
-    ICON            IDI_TRAY_BLUE,IDC_STATIC,89,176,20,20
-    CONTROL         "",IDC_RST_WHITE,"Button",BS_AUTORADIOBUTTON | BS_ICON,112,181,11,10
-    ICON            IDI_TRAY_WHITE,IDC_STATIC,125,176,20,20
-    CONTROL         "",IDC_RST_YELLOW,"Button",BS_AUTORADIOBUTTON | BS_ICON,148,181,11,10
-    ICON            IDI_TRAY_YELLOW,IDC_STATIC,161,176,20,20
+                    "Button",BS_AUTORADIOBUTTON,9,160,147,10
+    CONTROL         "",IDC_RST_BLK,"Button",BS_AUTORADIOBUTTON | BS_ICON | WS_GROUP | WS_TABSTOP,40,197,11,10
+    ICON            IDI_TRAY,IDC_STATIC,53,192,20,20
+    CONTROL         "",IDC_RST_BLUE,"Button",BS_AUTORADIOBUTTON | BS_ICON,76,197,11,10
+    ICON            IDI_TRAY_BLUE,IDC_STATIC,89,192,20,20
+    CONTROL         "",IDC_RST_WHITE,"Button",BS_AUTORADIOBUTTON | BS_ICON,112,197,11,10
+    ICON            IDI_TRAY_WHITE,IDC_STATIC,125,192,20,20
+    CONTROL         "",IDC_RST_YELLOW,"Button",BS_AUTORADIOBUTTON | BS_ICON,148,197,11,10
+    ICON            IDI_TRAY_YELLOW,IDC_STATIC,161,192,20,20
     CONTROL         "Always keep Password Safe on top",IDC_ALWAYSONTOP,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,4,197,10
-    GROUPBOX        "Initial system tray icon",IDC_STATIC,6,164,212,40
+    GROUPBOX        "Initial system tray icon",IDC_STATIC,6,180,212,40
 END
 
 IDD_PS_PASSWORDPOLICY DIALOGEX 0, 0, 223, 189
