@@ -69,6 +69,7 @@ public:
     ExplorerTypeTree, ListViewGridLines, MinimizeOnAutotype,
     ShowUsernameInTree, PWMakePronounceable,
     ClearClipoardOnMinimize, ClearClipoardOnExit, NeverSaveDatabaseNames,
+    ShowNotesAsToolTipsInTree,
     NumBoolPrefs};
   enum  IntPrefs {Column1Width, Column2Width, Column3Width, Column4Width,
     SortedColumn, PWDefaultLength, MaxMRUItems, IdleTimeout,
